--- a/source/index.html
+++ b/source/index.html
@@ -95,67 +95,67 @@
               <tr class="specification__header"> <!--заголовок-->
                 <th class="specification__header-column specification__header-column--feature"><span class="visually-hidden">Функция</span></th>
 			          <th class="specification__header-column">База<br><span class="price">1,99 USD</span></th>
-			          <th class="specification__header-column specification__header-column-hit">Стандарт<br><span class="price">3,99 USD</span></th>
+			          <th class="specification__header-column specification__header-column--hit">Стандарт<br><span class="price">3,99 USD</span></th>
 			          <th class="specification__header-column">Анлим<br><span class="price">9,99 USD</span></th>
               </tr>
-              <tr class="feature__item"> <!--строка-->
-                <td>
-                  <span class="feature-name">Розовый фильтр</span>
+              <tr class="specification__feature-item"> <!--строка-->
+                <td class="specification__feature-cell">
+                  <span class="specification__feature-name">Розовый фильтр</span>
                 </td>
-                <td>
-                  <span class="feature-name">Розовый фильтр</span>
-                  <img class="feature-image" src="https://via.placeholder.com/150x150" width="31" height="21" alt="Да">
-                  <img class="feature-image" src="https://via.placeholder.com/150x150" width="31" height="21" alt="Нет">
+                <td class="specification__feature-cell">
+                  <span class="specification__feature-name">Розовый фильтр</span>
+                  <img class="specification__feature-image" src="https://via.placeholder.com/150x150" width="31" height="21" alt="Да">
+                  <img class="specification__feature-image" src="https://via.placeholder.com/150x150" width="31" height="21" alt="Нет">
                 </td>
-                <td>
-                  <span class="feature-name">Розовый фильтр</span>
-                  <img class="feature-image" src="https://via.placeholder.com/150x150" width="31" height="21" alt="Да">
-                  <img class="feature-image" src="https://via.placeholder.com/150x150" width="31" height="21" alt="Нет">
+                <td class="specification__feature-cell">
+                  <span class="specification__feature-name">Розовый фильтр</span>
+                  <img class="specification__feature-image" src="https://via.placeholder.com/150x150" width="31" height="21" alt="Да">
+                  <img class="specification__feature-image" src="https://via.placeholder.com/150x150" width="31" height="21" alt="Нет">
                 </td>
-                <td>
-                  <span class="feature-name">Розовый фильтр</span>
-                  <img class="feature-image" src="https://via.placeholder.com/150x150" width="31" height="21" alt="Да">
-                  <img class="feature-image" src="https://via.placeholder.com/150x150" width="31" height="21" alt="Нет">
-                </td>
-              </tr>
-              <tr class="feature__item"> <!--строка-->
-                <td>
-                  <span class="feature-name">Смайлики</span>
-                </td>
-                <td>
-                  <span class="feature-name">Смайлики</span>
-                  <img class="feature-image" src="https://via.placeholder.com/150x150" width="31" height="21" alt="Да">
-                  <img class="feature-image" src="https://via.placeholder.com/150x150" width="31" height="21" alt="Нет">
-                </td>
-                <td>
-                  <span class="feature-name">Смайлики</span>
-                  <img class="feature-image" src="https://via.placeholder.com/150x150" width="31" height="21" alt="Да">
-                  <img class="feature-image" src="https://via.placeholder.com/150x150" width="31" height="21" alt="Нет">
-                </td>
-                <td>
-                  <span class="feature-name">Смайлики</span>
-                  <img class="feature-image" src="https://via.placeholder.com/150x150" width="31" height="21" alt="Да">
-                  <img class="feature-image" src="https://via.placeholder.com/150x150" width="31" height="21" alt="Нет">
+                <td class="specification__feature-cell">
+                  <span class="specification__feature-name">Розовый фильтр</span>
+                  <img class="specification__feature-image" src="https://via.placeholder.com/150x150" width="31" height="21" alt="Да">
+                  <img class="specification__feature-image" src="https://via.placeholder.com/150x150" width="31" height="21" alt="Нет">
                 </td>
               </tr>
-              <tr class="feature__item"> <!--строка-->
-                <td>
-                  <span class="feature-name">Комментарии</span>
+              <tr class="specification__feature-item"> <!--строка-->
+                <td class="specification__feature-cell">
+                  <span class="specification__feature-name">Смайлики</span>
                 </td>
-                <td>
-                  <span class="feature-name">Комментарии</span>
-                  <img class="feature-image" src="https://via.placeholder.com/150x150" width="31" height="21" alt="Да">
-                  <img class="feature-image" src="https://via.placeholder.com/150x150" width="31" height="21" alt="Нет">
+                <td class="specification__feature-cell">
+                  <span class="specification__feature-name">Смайлики</span>
+                  <img class="specification__feature-image" src="https://via.placeholder.com/150x150" width="31" height="21" alt="Да">
+                  <img class="specification__feature-image" src="https://via.placeholder.com/150x150" width="31" height="21" alt="Нет">
                 </td>
-                <td>
-                  <span class="feature-name">Комментарии</span>
-                  <img class="feature-image" src="https://via.placeholder.com/150x150" width="31" height="21" alt="Да">
-                  <img class="feature-image" src="https://via.placeholder.com/150x150" width="31" height="21" alt="Нет">
+                <td class="specification__feature-cell">
+                  <span class="specification__feature-name">Смайлики</span>
+                  <img class="specification__feature-image" src="https://via.placeholder.com/150x150" width="31" height="21" alt="Да">
+                  <img class="specification__feature-image" src="https://via.placeholder.com/150x150" width="31" height="21" alt="Нет">
                 </td>
-                <td>
-                  <span class="feature-name">Комментарии</span>
-                  <img class="feature-image" src="https://via.placeholder.com/150x150" width="31" height="21" alt="Да">
-                  <img class="feature-image" src="https://via.placeholder.com/150x150" width="31" height="21" alt="Нет">
+                <td class="specification__feature-cell">
+                  <span class="specification__feature-name">Смайлики</span>
+                  <img class="specification__feature-image" src="https://via.placeholder.com/150x150" width="31" height="21" alt="Да">
+                  <img class="specification__feature-image" src="https://via.placeholder.com/150x150" width="31" height="21" alt="Нет">
+                </td>
+              </tr>
+              <tr class="specification__feature__item"> <!--строка-->
+                <td class="specification__feature-cell">
+                  <span class="specification__feature-name">Комментарии</span>
+                </td>
+                <td class="specification__feature-cell">
+                  <span class="specification__feature-name">Комментарии</span>
+                  <img class="specification__feature-image" src="https://via.placeholder.com/150x150" width="31" height="21" alt="Да">
+                  <img class="specification__feature-image" src="https://via.placeholder.com/150x150" width="31" height="21" alt="Нет">
+                </td>
+                <td class="specification__feature-cell">
+                  <span class="specification__feature-name">Комментарии</span>
+                  <img class="specification__feature-image" src="https://via.placeholder.com/150x150" width="31" height="21" alt="Да">
+                  <img class="specification__feature-image" src="https://via.placeholder.com/150x150" width="31" height="21" alt="Нет">
+                </td>
+                <td class="specification__feature-cell">
+                  <span class="specification__feature-name">Комментарии</span>
+                  <img class="specification__feature-image" src="https://via.placeholder.com/150x150" width="31" height="21" alt="Да">
+                  <img class="specification__feature-image" src="https://via.placeholder.com/150x150" width="31" height="21" alt="Нет">
                 </td>
               </tr>
             </table>
@@ -169,12 +169,12 @@
           <div class="page-footer__contacts contacts">
             <p class="contacts__title">Остались вопросы?<br>Свяжитесь с нами!</p>
             <dl class="contacts__lists">
-              <dt class="contacts-type">Звоните:</dt>
-              <dd class="contacts-element><a href="tel:+78125556666">+7 (812) 555-66-66</a></dd>
-              <dt class="contacts-type">Пишите:</dt>
-              <dd class="contacts-element"><a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a></dd>
-              <dt class="contacts-type">Приезжайте в гости:</dt>
-              <dd class="contacts-element">г. Санкт-Петербург, ул. Большая Конюшенная 19/8</dd>
+              <dt class="contacts__item-type">Звоните:</dt>
+              <dd class="contacts__item-element><a href="tel:+78125556666">+7 (812) 555-66-66</a></dd>
+              <dt class="contacts__item-type">Пишите:</dt>
+              <dd class="contacts__item-element"><a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a></dd>
+              <dt class="contacts__item-type">Приезжайте в гости:</dt>
+              <dd class="contacts__item-element">г. Санкт-Петербург, ул. Большая Конюшенная 19/8</dd>
             </dl>
           </div>
 
@@ -183,22 +183,24 @@
           <a class="page-footer__logo"><img src="https://via.placeholder.com/150x150" width="74" height="23" alt="Приложение PINK"></a>
 
           <div class="page-footer__social">
-            <ul class="social__list">
+            <ul class="social">
               <li class="social__item">
-                <a class="social__link social__link--twitter" href="https://twitter.com/htmlacademy"><img src="https://via.placeholder.com/150x150" width="48" height="48" alt="Мы в Twitter"></a>
+                <a class="social__item-link social__link--twitter" href="https://twitter.com/htmlacademy"><img src="https://via.placeholder.com/150x150" width="48" height="48" alt="Мы в Twitter"></a>
               </li>
               <li class="social__item">
-                <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy"><img src="https://via.placeholder.com/150x150" width="48" height="48" alt="Мы в Facebook"></a>
+                <a class="social__item-link social__link--facebook" href="https://www.facebook.com/htmlacademy"><img src="https://via.placeholder.com/150x150" width="48" height="48" alt="Мы в Facebook"></a>
               </li>
               <li class="social__item">
-                <a class="social__link social__link--youtube" href="https://www.youtube.com/htmlacademy"><img src="https://via.placeholder.com/150x150" width="48" height="48" alt="Мы в YouTube"></a>
+                <a class="social__item-link social__link--youtube" href="https://www.youtube.com/htmlacademy"><img src="https://via.placeholder.com/150x150" width="48" height="48" alt="Мы в YouTube"></a>
               </li>
             </ul>
           </div>
 
           <div class="page-footer__copyright">
-            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-            <a class="copyright__link"><img src="https://via.placeholder.com/150x150" width="27" height="34" alt="HTML Academy"></a>
+            <div class="copyright">
+              <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">Разработано</a>
+              <a class="copyright__link"><img src="https://via.placeholder.com/150x150" width="27" height="34" alt="HTML Academy"></a>
+            </div>
           </div>
 
         </div>
