--- a/source/index.html
+++ b/source/index.html
@@ -196,8 +196,8 @@
             </ul>
           </div>
 
-          <div class="page-footer__copyright">
-            <div class="copyright">
+          <div class="page-footer__copyright copyright">
+            <div class="copyright__area">
               <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">Разработано</a>
               <a class="copyright__link"><img src="https://via.placeholder.com/150x150" width="27" height="34" alt="HTML Academy"></a>
             </div>
