+form.html mistakes bem

--- a/source/form.html
+++ b/source/form.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <title>HTML Academy: Пинк</title>
   </head>
-  <body class="page__body">
-    <header class="page__header">
+  <body class="page">
+    <header class="page-header">
       <a class="page-header__logo"><img src="https://via.placeholder.com/150x150" width="74" height="23" alt="Приложение PINK"></a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Главное меню</span></button>
         <div class="main-nav__wrapper">
-          <ul class="main-nav__list">
+          <ul class="nav-list">
             <li class="nav-list__item"><a>Главная</a></li>
             <li class="nav-list__item"><a>Фотографии</a></li>
             <li class="nav-list__item"><a>Конкурс</a></li>
@@ -21,9 +21,9 @@
     </header>
     <main class="page-main">
       <h1 class="visually-hidden">Приложение PINK - Взгляните на жизнь иначе!</h1>
-      <p class="form__slogan">Конкурс на самое безбашенное путешествие с Пинк</p>
-
       <form class="form" action="https://echo.htmlacademy.ru" method="post">
+        <h2 class="visually-hidden">Форма обратной связи</h2>
+        <p class="form__slogan">Конкурс на самое безбашенное путешествие с Пинк</p>
         <fieldset class="fields-person">
           <p class="fields-person__motivation-block">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!</p>
           <input class="fields-person__item" type="text" name="surname" id="surname" placeholder="Укажите фамилию *" required> <label for="surname">Фамилия:</label>
@@ -68,13 +68,13 @@
           <div class="page-footer__social">
             <ul class="social">
               <li class="social__item">
-                <a class="social__item-link social__link--twitter" href="https://twitter.com/htmlacademy"><img src="https://via.placeholder.com/150x150" width="48" height="48" alt="Мы в Twitter"></a>
+                <a class="social__item-link social__item-link--twitter" href="https://twitter.com/htmlacademy"><img src="https://via.placeholder.com/150x150" width="48" height="48" alt="Мы в Twitter"></a>
               </li>
               <li class="social__item">
-                <a class="social__item-link social__link--facebook" href="https://www.facebook.com/htmlacademy"><img src="https://via.placeholder.com/150x150" width="48" height="48" alt="Мы в Facebook"></a>
+                <a class="social__item-link social__item-link--facebook" href="https://www.facebook.com/htmlacademy"><img src="https://via.placeholder.com/150x150" width="48" height="48" alt="Мы в Facebook"></a>
               </li>
               <li class="social__item">
-                <a class="social__item-link social__link--youtube" href="https://www.youtube.com/htmlacademy"><img src="https://via.placeholder.com/150x150" width="48" height="48" alt="Мы в YouTube"></a>
+                <a class="social__item-link social__item-link--youtube" href="https://www.youtube.com/htmlacademy"><img src="https://via.placeholder.com/150x150" width="48" height="48" alt="Мы в YouTube"></a>
               </li>
             </ul>
           </div>
